--- a/card_product.html
+++ b/card_product.html
@@ -168,7 +168,7 @@
 										<ul>
 											<li>
 												<label class="is-vishidden">Магазин</label>
-												<input type="search" class="search-input" placeholder="Введите название магазина"/>
+												<input type="search" class="search-input" placeholder=""/>
 												<button class="search_btn"></button>
 											</li>
 										</ul>
@@ -272,35 +272,121 @@
 											</div>
 										</li>
 									</ul>
-									<ul class="pickup_content_mobile">
-										<li>
-											<div class="pcm_title">Адрес</div>
-											<div class="pcm_address">Москва, ул. Науки 25</div>
-										</li>
-										<li>
-											<div class="pcm_title">Режим работы</div>
-											<ul class="pcm_working_mode">
-												<li>
-													<p>пн-сб:</p>
-													<p>08:00-19:00</p>
-												</li>
-												<li>
-													<p>вс:</p>
-													<p>09:00-17:00</p>
-												</li>
-											</ul>
-										</li>
-										<li>
-											<div class="pcm_title">Доступно</div>
-											<div class="pcm_available">В наличие</div>
-										</li>
-										<li>
-											<div class="pcm_title">Количество</div>
-											<div class="pcm_quantity">1</div>
-										</li>
-										<a href="" class="pcm_item_buy_btn">купить</a>
-									</ul>
-									<button class="show_all_shops_btn">Показать все магазины</button>
+									<div class="pickup_content_mobile">
+										<ul class="pcm_list is_visible">
+											<li>
+												<div class="pcm_title">Адрес</div>
+												<div class="pcm_address">Москва, ул. Науки 25</div>
+											</li>
+											<li>
+												<div class="pcm_title">Режим работы</div>
+												<ul class="pcm_working_mode">
+													<li>
+														<p>пн-сб:</p>
+														<p>08:00-19:00</p>
+													</li>
+													<li>
+														<p>вс:</p>
+														<p>09:00-17:00</p>
+													</li>
+												</ul>
+											</li>
+											<li>
+												<div class="pcm_title">Доступно</div>
+												<div class="pcm_available">В наличие</div>
+											</li>
+											<li>
+												<div class="pcm_title">Количество</div>
+												<div class="pcm_quantity">1</div>
+											</li>
+											<a href="" class="pcm_item_buy_btn">купить</a>
+										</ul>
+										<ul class="pcm_list">
+											<li>
+												<div class="pcm_title">Адрес</div>
+												<div class="pcm_address">Москва, ул. Науки 25</div>
+											</li>
+											<li>
+												<div class="pcm_title">Режим работы</div>
+												<ul class="pcm_working_mode">
+													<li>
+														<p>пн-сб:</p>
+														<p>08:00-19:00</p>
+													</li>
+													<li>
+														<p>вс:</p>
+														<p>09:00-17:00</p>
+													</li>
+												</ul>
+											</li>
+											<li>
+												<div class="pcm_title">Доступно</div>
+												<div class="pcm_available">В наличие</div>
+											</li>
+											<li>
+												<div class="pcm_title">Количество</div>
+												<div class="pcm_quantity">1</div>
+											</li>
+											<a href="" class="pcm_item_buy_btn">купить</a>
+										</ul>
+										<ul class="pcm_list">
+											<li>
+												<div class="pcm_title">Адрес</div>
+												<div class="pcm_address">Москва, ул. Науки 25</div>
+											</li>
+											<li>
+												<div class="pcm_title">Режим работы</div>
+												<ul class="pcm_working_mode">
+													<li>
+														<p>пн-сб:</p>
+														<p>08:00-19:00</p>
+													</li>
+													<li>
+														<p>вс:</p>
+														<p>09:00-17:00</p>
+													</li>
+												</ul>
+											</li>
+											<li>
+												<div class="pcm_title">Доступно</div>
+												<div class="pcm_available">В наличие</div>
+											</li>
+											<li>
+												<div class="pcm_title">Количество</div>
+												<div class="pcm_quantity">1</div>
+											</li>
+											<a href="" class="pcm_item_buy_btn">купить</a>
+										</ul>
+										<ul class="pcm_list">
+											<li>
+												<div class="pcm_title">Адрес</div>
+												<div class="pcm_address">Москва, ул. Науки 25</div>
+											</li>
+											<li>
+												<div class="pcm_title">Режим работы</div>
+												<ul class="pcm_working_mode">
+													<li>
+														<p>пн-сб:</p>
+														<p>08:00-19:00</p>
+													</li>
+													<li>
+														<p>вс:</p>
+														<p>09:00-17:00</p>
+													</li>
+												</ul>
+											</li>
+											<li>
+												<div class="pcm_title">Доступно</div>
+												<div class="pcm_available">В наличие</div>
+											</li>
+											<li>
+												<div class="pcm_title">Количество</div>
+												<div class="pcm_quantity">1</div>
+											</li>
+											<a href="" class="pcm_item_buy_btn">купить</a>
+										</ul>
+										<button class="show_all_shops_btn pcm_btn_is_active">Показать все магазины</button>
+									</div>
 								</div>
 							</div>
 							<div class="cpi_tab tab-5">
@@ -1086,6 +1172,9 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="pg_content_bottom">
+					<a href="" class="show_more_btn">Показать еще</a>
 				</div>
 			</section>
 		</main>
