--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<link rel="stylesheet" href="css/style.min.css">
-	<title>Каталог</title>
+	<title>Каталог товаров</title>
 </head>
 <body>
 	<div class="wrapper">
@@ -1429,6 +1429,9 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="pg_content_bottom">
+					<a href="" class="show_more_btn">Показать еще</a>
 				</div>
 			</section>
 		</main>
