--- a/index.html
+++ b/index.html
@@ -1741,6 +1741,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="pg_content_bottom">
+					<a href="" class="show_more_btn">Показать еще</a>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
