--- a/card_product.html
+++ b/card_product.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-	<link rel="stylesheet" href="css/style.min.css">
-	<title>Карточка товара</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20230115120546"/>
+	<link rel="stylesheet" href="css/style.min.css?_v=20230115120546">
+	<title>Карточка товара (Гидроцикл BRP SeaDoo GTI 155hp SE Long Blue Metallic)</title>
 </head>
 <body>
 	<div class="wrapper">
@@ -73,7 +73,7 @@
 				<div class="cart_product">
 					<div class="cart_product_item" data-da=".characteristics, 576, first">
 						<div class="ct_item_photo">
-							<img src="img/goods/jet_ski_blue.png" alt="">
+							<picture><source srcset="img/goods/jet_ski_blue.webp" type="image/webp"><img src="img/goods/jet_ski_blue.png" alt=""></picture>
 						</div>
 						<div class="ct_item_prices">
 							<p class="so_price_old">1 200 475 ₽</p>
@@ -304,7 +304,7 @@
 										<ul class="pcm_list">
 											<li>
 												<div class="pcm_title">Адрес</div>
-												<div class="pcm_address">Москва, ул. Науки 25</div>
+												<div class="pcm_address">Москва, ул. Южная 134</div>
 											</li>
 											<li>
 												<div class="pcm_title">Режим работы</div>
@@ -325,14 +325,14 @@
 											</li>
 											<li>
 												<div class="pcm_title">Количество</div>
-												<div class="pcm_quantity">1</div>
+												<div class="pcm_quantity">2</div>
 											</li>
 											<a href="" class="pcm_item_buy_btn">купить</a>
 										</ul>
 										<ul class="pcm_list">
 											<li>
 												<div class="pcm_title">Адрес</div>
-												<div class="pcm_address">Москва, ул. Науки 25</div>
+												<div class="pcm_address">Санкт-Петербург, <br>ул. Красная 19</div>
 											</li>
 											<li>
 												<div class="pcm_title">Режим работы</div>
@@ -349,18 +349,18 @@
 											</li>
 											<li>
 												<div class="pcm_title">Доступно</div>
-												<div class="pcm_available">В наличие</div>
+												<div class="pcm_available">Нет в наличии</div>
 											</li>
 											<li>
 												<div class="pcm_title">Количество</div>
-												<div class="pcm_quantity">1</div>
+												<div class="pcm_quantity">0</div>
 											</li>
 											<a href="" class="pcm_item_buy_btn">купить</a>
 										</ul>
 										<ul class="pcm_list">
 											<li>
 												<div class="pcm_title">Адрес</div>
-												<div class="pcm_address">Москва, ул. Науки 25</div>
+												<div class="pcm_address">Киев, ул Шевченко 167</div>
 											</li>
 											<li>
 												<div class="pcm_title">Режим работы</div>
@@ -377,11 +377,11 @@
 											</li>
 											<li>
 												<div class="pcm_title">Доступно</div>
-												<div class="pcm_available">В наличие</div>
+												<div class="pcm_available">Нет в наличии</div>
 											</li>
 											<li>
 												<div class="pcm_title">Количество</div>
-												<div class="pcm_quantity">1</div>
+												<div class="pcm_quantity">0</div>
 											</li>
 											<a href="" class="pcm_item_buy_btn">купить</a>
 										</ul>
@@ -435,7 +435,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/backpack.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/backpack.webp" type="image/webp"><img src="img/backpack.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Водонепроницаемый Рюкзак</div>
@@ -462,7 +462,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/vest.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/vest.webp" type="image/webp"><img src="img/vest.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательный жилет BRP Men's Airflow PFD</div>
@@ -488,7 +488,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio.webp" type="image/webp"><img src="img/audio.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-Premium System</div>
@@ -515,7 +515,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -542,7 +542,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -569,7 +569,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -606,7 +606,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/backpack.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/backpack.webp" type="image/webp"><img src="img/backpack.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Водонепроницаемый Рюкзак</div>
@@ -633,7 +633,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/vest.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/vest.webp" type="image/webp"><img src="img/vest.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательный жилет BRP Men's Airflow PFD</div>
@@ -659,7 +659,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio.webp" type="image/webp"><img src="img/audio.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-Premium System</div>
@@ -696,7 +696,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/backpack.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/backpack.webp" type="image/webp"><img src="img/backpack.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Водонепроницаемый Рюкзак</div>
@@ -723,7 +723,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/vest.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/vest.webp" type="image/webp"><img src="img/vest.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательный жилет BRP Men's Airflow PFD</div>
@@ -749,7 +749,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio.webp" type="image/webp"><img src="img/audio.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-Premium System</div>
@@ -776,7 +776,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -814,7 +814,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio_01.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio_01.webp" type="image/webp"><img src="img/audio_01.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-портативная система</div>
@@ -840,7 +840,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/echomap.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/echomap.webp" type="image/webp"><img src="img/echomap.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Garmin Echomap Plus 62cv</div>
@@ -867,7 +867,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/key.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/key.webp" type="image/webp"><img src="img/key.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">RF D.E.S.S.TM Key</div>
@@ -893,7 +893,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/suit.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/suit.webp" type="image/webp"><img src="img/suit.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Мужской костюм 3мм</div>
@@ -919,7 +919,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/suit.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/suit.webp" type="image/webp"><img src="img/suit.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Мужской костюм 3мм</div>
@@ -956,7 +956,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/backpack.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/backpack.webp" type="image/webp"><img src="img/backpack.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Водонепроницаемый Рюкзак</div>
@@ -983,7 +983,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/vest.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/vest.webp" type="image/webp"><img src="img/vest.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательный жилет BRP Men's Airflow PFD</div>
@@ -1009,7 +1009,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio.webp" type="image/webp"><img src="img/audio.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-Premium System</div>
@@ -1036,7 +1036,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -1073,7 +1073,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/backpack.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/backpack.webp" type="image/webp"><img src="img/backpack.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Водонепроницаемый Рюкзак</div>
@@ -1100,7 +1100,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/vest.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/vest.webp" type="image/webp"><img src="img/vest.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательный жилет BRP Men's Airflow PFD</div>
@@ -1126,7 +1126,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/audio.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/audio.webp" type="image/webp"><img src="img/audio.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">BRP Audio-Premium System</div>
@@ -1153,7 +1153,7 @@
 														<div class="pg_item_cart"><img src="img/icons/white_cart.svg" alt=""></div>
 														<div class="pg_item_content">
 															<div class="pg_item_content_top">
-																<div class="pg_item_photo"><img src="img/rescue_equipment.png" alt=""></div>
+																<div class="pg_item_photo"><picture><source srcset="img/rescue_equipment.webp" type="image/webp"><img src="img/rescue_equipment.png" alt=""></picture></div>
 															</div>
 															<div class="pg_item_content_bottom">
 																<div class="pg_item_title">Спасательное снаряжение</div>
@@ -1223,7 +1223,7 @@
 	</div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-	<script src="js/app.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20230115120546"></script>
+	<script src="js/app.min.js?_v=20230115120546"></script>
 </body>
 </html>
